plugins {
    id "com.android.application"
}

android {
    namespace = "awkoo.terminal"
    compileSdk = 36
    ndkVersion = "28.2.13676358"

    defaultConfig {
        applicationId = "awkoo.terminal"
        minSdk = 28
        //noinspection ExpiredTargetSdkVersion
        targetSdk = 28
        versionCode = 100
        versionName = "1.0.0"
        signingConfig = signingConfigs.debug
    }

    signingConfigs {
        debug {
            storeFile = file('testkey_untrusted.jks')
            keyAlias = 'alias'
            storePassword = 'xrj45yWGLbsO7W0v'
            keyPassword = 'xrj45yWGLbsO7W0v'
        }
    }

    buildTypes {
        release {
            minifyEnabled = true
            shrinkResources = true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    externalNativeBuild {
        ndkBuild {
            path = "src/main/jni/Android.mk"
        }
    }

    buildFeatures {
        viewBinding = true
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
}

dependencies {
    implementation "androidx.appcompat:appcompat:1.7.1"
    implementation "androidx.annotation:annotation:1.9.1"
    implementation "androidx.core:core:1.17.0"
    implementation 'androidx.drawerlayout:drawerlayout:1.2.0'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'androidx.viewpager:viewpager:1.1.0'
    implementation 'com.google.android.material:material:1.14.0-alpha04'
    implementation 'com.google.guava:guava:33.4.8-jre'
}
